# Jasmine3

./: .gitignore  BUILD_WARNINGS.md  DEPENDENCIES.md  JetBrains_koog_overview.md  KOOG_MIGRATION_PLAN.md  PLAN-min-headers-abi-safe.md  README.md  README_ZH_CN.md  README_ZH_TW.md  REMOVE_FONT_SIZE_FEATURE_PLAN.md  TRANSLATION_REMOVAL_PLAN.md  TTS_Remove_Plan.txt  VOID_AGENT_PROMPTS.md  image_generation_overview.md  lint-warnings.txt  settings.gradle.kts  彻底删除生成对话建议的功能的方案.md  本地构建与测试命令.md  聊天助手里面的快捷消息彻底删除方案.md  语言切换方案兼容性核对报告.md  语言切换机制深度分析.md  语言切换统一方案合并版.md
.github/: FUNDING.yml
ai/: README.md  build.gradle.kts
ai/src/main/cpp/: CMakeLists.txt  build.sh  diffusion_session.h  llm_mnn_jni.cpp  llm_session.cpp  llm_session.h
ai/src/main/cpp/audio/: audio.hpp
ai/src/main/cpp/build_arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
ai/src/main/cpp/mnn/: CMakeLists.txt  README.md  README_JP.md
ai/src/main/cpp/mnn/.github/workflows/: android.yml  linux.yml  macos.yml  mnn_release.yml  windows.yml
ai/src/main/cpp/mnn/docs/compile/: cmake.md  other.md
ai/src/main/cpp/mnn/docs/intro/: releases.md
ai/src/main/cpp/mnn/docs/pymnn/: MNN.md
ai/src/main/cpp/mnn/docs/tools/: compress.md
ai/src/main/cpp/mnn/package_scripts/android/: build.sh
ai/src/main/cpp/mnn/package_scripts/linux/: build_lib.sh
ai/src/main/cpp/mnn/package_scripts/win/: build_lib_release.ps1
ai/src/main/cpp/mnn/pymnn/: CMakeLists.txt
ai/src/main/cpp/mnn/pymnn/pip_package/: build_deps.py  setup.py
ai/src/main/cpp/mnn/pymnn/src/: MNN.cc  llm.h
ai/src/main/cpp/mnn/source/backend/nnapi/backend/: NNAPINeuralNetworks.h
ai/src/main/cpp/mnn/tools/converter/source/caffe/: caffe.proto
ai/src/main/cpp/mnn/tools/mnncompress/mnncompress/pytorch/: LSQ_quantizer.py  TaylorFO_channel_pruner.py  weight_quantizer.py
ai/src/main/cpp/mnn/tools/mnncompress/mnncompress/tensorflow/: fix_quant_params.py
ai/src/main/cpp/mnn/transformers/diffusion/engine/include/diffusion/: diffusion.hpp
ai/src/main/cpp/mnn/transformers/llm/engine/: CMakeLists.txt
ai/src/main/cpp/mnn/transformers/llm/engine/include/llm/: llm.hpp
ai/src/main/cpp/mnn/transformers/llm/engine/src/: httplib.h  llm.cpp  llmconfig.hpp  omni.cpp  omni.hpp
ai/src/main/cpp/mnn/transformers/llm/export/: llmexport.py
ai/src/main/cpp/mnn/transformers/llm/export/utils/: model_mapper.py  mtp.py
ai/src/main/cpp/mnn/transformers/llm/resource/config/: omni_lookahead_config.json
app/: build.gradle.kts
app/baselineprofile/: build.gradle.kts
common/: build.gradle.kts
document/: build.gradle.kts
gradle/: libs.versions.toml
highlight/: build.gradle.kts
i18n/: .gitignore  CLAUDE.md  README.md  config.yml  package.json  tsconfig.json
i18n/src/: config.ts  index.tsx  module-loader.ts  translator.ts  xml-parser.ts
koog-0.5.4/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
koog-0.5.4/.github/: pull_request_template.md
koog-0.5.4/docs/: README.md  build.gradle.kts  mkdocs.yml  pyproject.toml
koog-0.5.4/gradle/: libs.versions.toml
koog-0.5.4/integration-tests/: build.gradle.kts
koog-0.5.4/koog-agents/: build.gradle.kts
search/: build.gradle.kts
tts/: build.gradle.kts
(+915 files in other folders)
